<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello_moveit_ur</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="Stanley@gmial.com">Stanley</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>rclcpp</depend>
  <depend>ur_robot_driver</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>


  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
